# fennel-language-server

./: Cargo.toml
crates/fennel-language-server/: Cargo.toml
crates/fennel-language-server/src/: main.rs
crates/fennel-parser/: Cargo.toml
crates/fennel-parser/src/: ast.rs  lexer.rs
crates/fennel-parser/src/ast/: error.rs  nodes.rs
crates/fennel-parser/src/parser/: bnf.rs
